UI Fixes to Table, Headers, and Dialog
- Added sorting arrow to headers
- Got rid of the ugly border that appeared when clicking a header
- Fixed sizing of the table and dialog to not be so wide when on larger
screens
- Fixed the height issue on the dialog such that it has no minimum
height but a maximum height depending on screen size.
- Added a footer with an Edit button on the dialog. It is always visible
as long as the dialog is open and does not interfere with the scrollbar.
- Other minor fixes and edits

--- a/app/app.css
+++ b/app/app.css
@@ -2,12 +2,32 @@
     width: 33%;
 }
 
+.tableHeadLabel:focus {
+    outline: none;
+    border: 0;
+}
+
+.tableHeadLabel {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* IE/Edge */
+    user-select: none;           /* non-prefixed version, currently
+                                  not supported by any browser */
+}
+
 .subHeadFlexing {
     margin-right: 17px;
 }
 
-.subHeadText {
+.subHeadText, .subArrow{
     color: #2196f3;
+    display: inline;
+}
+
+.subArrow {
+    padding-left: 0.5em;
 }
 
 /*
@@ -16,10 +36,9 @@ Dialog
 
 .dialogWindow {
     border-radius: 0;
-    max-width:90%;
-    max-height:90%;
-    width: 60%;
-    height: 60%;
+    max-width:85%;
+    max-height:85%;
+    width: 70%;
 }
 
 .dialogTB {
@@ -30,6 +49,10 @@ Dialog
     padding: 1.3em 0;
 }
 
+.infoTextHead {
+    padding-left: 1.1em;
+ }
+
 @media (max-width: 680px) {
     .flexing50 {
         width: 50%;
@@ -37,9 +60,17 @@ Dialog
 
     .dialogWindow {
         border-radius: 0;
-        max-width:90%;
-        max-height:90%;
+        max-width:85%;
+        max-height:85%;
         width: 85%;
-        height: 85%;
+    }
+}
+
+@media (min-width: 900px) {
+    .dialogWindow {
+        border-radius: 0;
+        max-width:85%;
+        max-height:85%;
+        width: 750px;
     }
 }
